# atmega328trainer

./: .gitignore  README.md
schematic/: anemometre.csv  anemometre.kicad_pcb  anemometre.kicad_prl  anemometre.kicad_pro  anemometre.kicad_sch  fp-info-cache
schematic/gerber/: anemometre-B_Cu.gbr  anemometre-B_Mask.gbr  anemometre-B_Paste.gbr  anemometre-B_Silkscreen.gbr  anemometre-Edge_Cuts.gbr  anemometre-F_Cu.gbr  anemometre-F_Mask.gbr  anemometre-F_Paste.gbr  anemometre-F_Silkscreen.gbr  anemometre-NPTH.drl  anemometre-PTH.drl  anemometre-job.gbrjob
src/: CMakeLists.txt  anemometre.atsln
src/anemometre/: anemometre.componentinfo.xml  anemometre.cproj  main.c
src/anemometre/Debug/: Makefile  anemometre.elf  anemometre.hex  anemometre.lss  anemometre.map  anemometre.srec  main.d
